--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <randomcoder.taglibs.version>1.6.10</randomcoder.taglibs.version>
     <junit.version>4.12</junit.version>
     <log4j.version>1.2.17</log4j.version>
+    <jna.version>4.1.0</jna.version>
     <maven.project.info.reports.plugin.version>2.8.1</maven.project.info.reports.plugin.version>
     <jacoco.maven.plugin.version>0.7.5.201505241946</jacoco.maven.plugin.version>
     <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
@@ -47,8 +48,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -134,7 +135,11 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${log4j.version}</version>
-      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>${jna.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
