--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>randomcoder-log4j-systemd-journal</artifactId>
   <name>Randomcoder Log4J systemd journal Appender</name>
   <packaging>jar</packaging>
-  <version>1.0.6-SNAPSHOT</version>
+  <version>1.0.6</version>
   <inceptionYear>2015</inceptionYear>
   <url>https://randomcoder.org/nexus/content/sites/randomcoder-log4j-systemd-journal/</url>
   <description>
@@ -20,7 +20,7 @@
     <connection>scm:git:https://github.com/insideo/randomcoder-log4j-systemd-journal.git</connection>
     <developerConnection>scm:git:git@github.com:insideo/randomcoder-log4j-systemd-journal.git</developerConnection>
     <url>https://github.com/insideo/randomcoder-log4j-systemd-journal</url>
-    <tag>HEAD</tag>
+    <tag>randomcoder-log4j-systemd-journal-1.0.6</tag>
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
