--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -12,7 +10,7 @@
     <artifactId>randomcoder-log4j-systemd-journal</artifactId>
     <name>Randomcoder Log4J systemd journal Appender</name>
     <packaging>jar</packaging>
-    <version>1.0.9-SNAPSHOT</version>
+    <version>1.0.9</version>
     <inceptionYear>2015</inceptionYear>
     <url>https://github.com/insideo/randomcoder-log4j-systemd-journal</url>
     <description>
@@ -27,7 +25,7 @@
             scm:git:git@github.com:insideo/randomcoder-log4j-systemd-journal.git
         </developerConnection>
         <url>https://github.com/insideo/randomcoder-log4j-systemd-journal</url>
-        <tag>HEAD</tag>
+        <tag>randomcoder-log4j-systemd-journal-1.0.9</tag>
     </scm>
     <developers>
         <developer>
