--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>randomcoder-log4j-systemd-journal</artifactId>
     <name>Randomcoder Log4J systemd journal Appender</name>
     <packaging>jar</packaging>
-    <version>1.0.9</version>
+    <version>1.0.10-SNAPSHOT</version>
     <inceptionYear>2015</inceptionYear>
     <url>https://github.com/insideo/randomcoder-log4j-systemd-journal</url>
     <description>
@@ -25,7 +25,7 @@
             scm:git:git@github.com:insideo/randomcoder-log4j-systemd-journal.git
         </developerConnection>
         <url>https://github.com/insideo/randomcoder-log4j-systemd-journal</url>
-        <tag>randomcoder-log4j-systemd-journal-1.0.9</tag>
+        <tag>HEAD</tag>
     </scm>
     <developers>
         <developer>
